VORTEX-5999: Working on preview of colors.